--- a/_slides/cours1/index.html
+++ b/_slides/cours1/index.html
@@ -1,19 +1,162 @@
 ---
 title: Cours 1 - Introduction
 description: Introduction de l'enseignant et de la matière du cours
-theme: night
-date: 2016-1-05
+theme: black
+date: 2017-1-09
 reveal_config:
   controls: true
   progress: true
   transition: slide
   slideNumber: true
 ---
-<section>
-  <h1>Slide 1</h1>
-  <p>Hello World!</p>
+<section data-markdown>
+  # CR469
+  # Cryptographie appliquée
+  ## Cours 1
 </section>
 <section>
-  <h1>Slide 2</h1>
-  <p>Hello again!</p>
+  <section>
+    <h1> A propos de moi</h1>
+  </section>
+  <section data-markdown>
+    ## Patrick Lécuyer
+
+    VP Architecure Sécurité - IaaS et PaaS - Morgan Stanley
+
+    18 ans d'expérience en TI dans différentes industries:
+
+    - Cirque du Soleil
+    - Domtar
+    - Secteur financier
+    - Agences de santé
+
+    Membre de Customer Advisory Boards:
+    - Google Cloud Platform
+    - Bracket Computing
+  </section>
+  <section data-markdown>
+    ##Comment me rejoindre?
+
+    Après le cours: 15 minutes
+
+    Par courriel: [patrick.lecuyer@polymtl.ca](mailto:patrick.lecuyer@polymtl.ca) - Prevoir 48 heures
+
+    Slack: [cr490.slack.com](https://cr490.slack.com)
+
+    Twitter: [@patricklecuyer](https://twitter.com/patricklecuyer)
+
+    LinkedIn: https://ca.linkedin.com/in/patricklecuyer
+  </section>
+</section>
+<section>
+  <section data-markdown>
+    # Le cours
+  </section>
+  <section data-markdown>
+  ## Objectifs
+-	différencier les classes d’algorithmes cryptographiques ;
+-	différencier les technologies de gestion des clés ;
+-	évaluer l’impact des caractéristiques de différentes architectures de gestion des clés sur la confidentialité des données et l’intégrité des données ;
+-	évaluer l’impact des caractéristiques de différents algorithmes cryptographiques sur la sécurité, la performance et le mode d’utilisation.
+
+
+  </section>
+  <section data-markdown>
+    ##Structure
+
+    |Cours|Contenu|
+    |-----|-------|
+    |1| Introduction|
+    |2| Concepts mathématiques de base|
+    |3-4| Algorithmes modernes|
+    |5-6| Attaques|
+    |7-10| Application en entreprise|
+    |11 | Infonuagique et Présentation Google|
+    |12| Étude de case|
+    |13| Révision|
+  </section>
+  <section data-markdown>
+  ## Devoirs
+  5 courts quiz à choix de réponse, donné 1 semaine avant la date de remise.  Ces devoirs correspondent aux sections importantes du cours
+
+  |Quiz|Date|
+  |-----|-------|
+  |1| 9 Février|
+  |2| 23 février|
+  |3| 16 mars|
+  |4| 30 mars|
+  |5| 13 avril|
+  </section>
+  <section data-markdown>
+  ## Examen Final
+
+   * En salle (Polytechnique et Québec)
+   * Informatisé à choix de réponse
+   * Documentation permise
+   * Information plus en détails a venir à la fin de la session
+
+   ** Assurez-vous d'être dans le bon groupe!! **
+   * Groupe 01: Montréal
+   * Groupe 11: Québec
+
+   ** Date de l'examen**: 20 avril
+ </section>
+  <section data-markdown>
+    ##Laboratoires
+    * Laboratoires pratiques durant plusieurs cours
+    * Les laboratoires individuels ne sont pas évalués
+    * Le contenu des laboratoires est matière à examen
+  </section>
+</section>
+<section>
+  <section data-markdown>
+    # Les outils
+  </section>
+  <section data-markdown>
+  ## Moodle
+
+Site standard Moodle de Polytechnique. Ce site sera utilisé pour les devoirs, les remises de laboratoires, l'accès a via et l'accès aux fichiers du cours.  Une version PDF des notes de cours sera aussi disponible pour chaque séance de cours.
+</section>
+<section data-markdown>
+## Notes en ligne
+
+Site: http://cr490.patl.io
+
+Sources: https://github.com/patricklecuyer/cr490/
+
+Les *pull requests* sont la bienvenue.  Les contrinutions des étudiants seront mentionné dans les future version des cours.
+</section>
+<section data-markdown>
+## Slack
+
+Plateforme de communication et de collaboration.
+
+Cette plateforme sera utilisée en remplacement des forums Moodle dans le cadre de ce cours.
+
+Inscription:  https://cr490.slack.com/signup
+
+Accès: https://cr490.slack.com
+
+**IMPORTANT**
+
+Utiliser votre addresse @polymtl.ca pour vous enregistrer à Slack
+</section>
+<section data-markdown>
+#Demo Slack
+</section>
+</section>
+</section>
+<section>
+  <section data-markdown>
+    # Introduction
+  </section>
+  <section data-markdown>
+    ## Pourquoi la crytographie?
+  </section>
+  <section data-markdown>
+  ## Faiblesses de la cryptographie
+  </section>
+  <section data-markdown>
+    ## Où est-ce utile en entreprise?
+  </section>
 </section>
