--- a/_slides/cours2/index.html
+++ b/_slides/cours2/index.html
@@ -19,23 +19,23 @@ reveal_config:
     <h1> Pourquoi la cryptographie?</h1>
   </section>
   <section>
-    <h2>Caractéristiques de sécurité</h2>
+    <h2>Caractéristiques de sécurité de l'information</h2>
     <ul>
     <li class="fragment grow">Confidentialité</li>
     <li class="fragment grow">Intégrité</li>
     <li class="fragment shrink">Disponibilité</li>
     <li class="fragment grow">Authentification</li>
-    <li class="fragment shrink">Authorization</li>
+    <li class="fragment shrink">Autorisation</li>
     <li class="fragment grow">Audit</li>
   </ul>
   </section>
 </section>
 <section>
   <section>
-    <h1> Ou appliquer la cryptographie?</h1>
+    <h1> Où appliquer la cryptographie?</h1>
   </section>
   <section>
-  <h2>Ou appliquer la cryptographie?</h2>
+  <h2>Où appliquer la cryptographie?</h2>
   <ul>
   <li class="fragment">Au repos</li>
    <li class="fragment">En mouvement</li>
@@ -49,14 +49,14 @@ reveal_config:
   <section>
   <h2>Types d'algorithmes</h2>
   <ul>
-  <li class="fragment">Symmetriques</li>
-   <li class="fragment">Assymétriques</li>
+  <li class="fragment">Symétriques</li>
+   <li class="fragment">Asymétriques</li>
    </ul>
 </section>
 </section>
 <section>
   <section>
-    <h1> Techniques cryptographiques</h1>
+    <h1>Techniques cryptographiques</h1>
   </section>
   <section>
   <h2>Techniques cryptographiques</h2>
@@ -80,7 +80,7 @@ reveal_config:
     <li class="fragment">Intégrité</li>
     <li class="fragment">Disponibilité</li>
     <li class="fragment">Authentification</li>
-    <li class="fragment">Authorization</li>
+    <li class="fragment">Autorisation</li>
     <li class="fragment">Audit</li>
   </ul>
   </section>
@@ -92,7 +92,6 @@ reveal_config:
     <li class="fragment">Historique</li>
     <li class="fragment">Révocation</li>
     <li class="fragment">Enveloppe</li>
-    <li class="fragment">Exportation</li>
     <li class="fragment">Audit</li>
   </ul>
   </section>
