--- a/_slides/cours3/index.html
+++ b/_slides/cours3/index.html
@@ -1,6 +1,6 @@
 ---
 title: Cours 3 - Gestion des clés
-description: Introduction a la gestion des clés
+description: Introduction à la gestion des clés
 theme: night
 date: 2017-1-19
 reveal_config:
@@ -21,14 +21,14 @@ reveal_config:
   <section data-markdown>
     ## Définition
 
-    La gestion des clé est l'ensemble des techniques qui permettent de controller l'accès et protéger les clés cryptographiques (et autres secrets).
+    La gestion des clés est l'ensemble des techniques qui permettent de contrôler l'accès et protéger les clés cryptographiques (et autres secrets).
   </section>
   <section data-markdown>
     ## Questions à se poser
 
-    * Qui peux voir la clé?
-    * Comment comprendre ou les clé ssont utilisées?
-    * Dans quel cas est-ce qu'un individu peut avoir accès aux données non-chiffrée?
+    * Qui peut voir la clé?
+    * Comment comprendre où les clés sont utilisées?
+    * Dans quel cas est-ce qu'un individu peut avoir accès aux données non-chiffrées?
     * De quelle manière est-ce que le chiffrement amméliore ma posture de sécurité?
   </section>
 </section>
@@ -43,6 +43,8 @@ reveal_config:
 
     **A cryptoperiod is the time span during which a specific key is authorized for use by legitimate
 entities, or the keys for a given system will remain in effect**
+    **Une cryptopériode est la durée de temps pendant laquelle une clé spécifique est autorisée pour
+    utilisation par des entités légitimes ou pendant laquelle les clés pour un système donné demeurent actives**
 
   </section>
   <section data-markdown>
@@ -50,32 +52,41 @@ entities, or the keys for a given system will remain in effect**
 
     * Limits the amount of information protected by a given key that is available for
 cryptanalysis,
-    * Limits the amount of exposure if a single key is compromised,
-    *  Limits the use of a particular algorithm (e.g., to its estimated effective lifetime),
+    * Limite la taille d'information, protégée par une certaine clé, disponible pour cryptanalyse
+    * Limits the amount of exposure if a single key is compromised
+    * Limite l'exposition advenant le cas d'une seule clé compromise
+    *  Limits the use of a particular algorithm (e.g., to its estimated effective lifetime)
+    * Limite l'utilisation d'un algorithme particulier (ex. à sa durée de vie efficace estimée)
     *  Limits the time available for attempts to penetrate physical, procedural, and logical
-access mechanisms that protect a key from unauthorized disclosure,
+    access mechanisms that protect a key from unauthorized disclosure,
+    * Limite le temps disponible pour les tentatives de pénétration des mécanismes d'accès physiques,
+    procéduraux et logiques qui protègent une clé contre les divulgations non autorisées
     *  Limits the period within which information may be compromised by inadvertent
-disclosure of keying material to unauthorized entities, and
+disclosure of keying material to unauthorized entities
+    *  Limite la période durant laquelle l'information pourrait avoir été compromise par divulgation
+    accidentelle du matériel de chiffrement à des entités non autorisées
     *  Limits the time available for computationally intensive cryptanalytic attacks (in
 applications where long-term key protection is not required).
+    * Limite le temps disponible pour les attaques de cryptanalyse nécessitant un calcul intensif
+    (dans les cas où une protection de clé à long terme n'est pas nécessaire)
   </section>
   <section data-markdown>
     ## Rotation des clés
 
-    Une politique de rotation des clés définie comment une organisation s'assure que les clés ne dépassent pas les cryptopériodes définie.  Normalement, cette politique assure que les clés seront changés régulièrement, à un intervalle plus court que la cryptopériode.
+    Une politique de rotation des clés définit comment une organisation s'assure que les clés ne dépassent pas les cryptopériodes définies.  Normalement, cette politique assure que les clés seront changées régulièrement, à un intervalle plus court que la cryptopériode.
   </section>
   <section data-markdown>
     ## Gestion des versions
 
-    Une des problématiques communes avec la rotation des clés est la complexité liée à la gestion des données déjà chifrées.  Rechiffrer l'ensemble des données lors de la rotation d'une clé est couteux et souvent irréaliste.  Afin de contourner cette problématique, un mécanisme des gestion des versions est souvent utilisé.
+    Une des problématiques communes avec la rotation des clés est la complexité liée à la gestion des données déjà chifrées.  Rechiffrer l'ensemble des données lors de la rotation d'une clé est coûteux et souvent irréaliste.  Afin de contourner cette problématique, un mécanisme des gestion des versions est souvent utilisé.
   </section>
   <section data-markdown>
     ## Mécanisme de gestion des versions
 
-    1. Lorsqu'une clée est générée, un numéro de version est assigné à cette clé.
-    2. Lorsqu'une requète est recue pour chiffrer des données, la clé la plus récente est utilisée, et le numéro de version de la clé est enregistré avec les données chiffré.
+    1. Lorsqu'une clé est générée, un numéro de version est assigné à cette clé.
+    2. Lorsqu'une reqête est reçue pour chiffrer des données, la clé la plus récente est utilisée, et le numéro de version de la clé est enregistré avec les données chiffrées.
     3. Lorsqu'une requète est recue pour déchiffrer des données, la version de la clé référencée est utilisée pour déchiffrer.
-    4. Lorsque la cryptopériode d'une version de clé est échue, les données chiffrées avec cette clé sont rechiffré avec la version la plus récente, et la clé échue est détruite.
+    4. Lorsque la cryptopériode d'une version de clé est échue, les données chiffrées avec cette clé sont rechiffrées avec la version la plus récente et la clé échue est détruite.
 
   </section>
   <section data-markdown>
@@ -88,22 +99,22 @@ applications where long-term key protection is not required).
   <section data-markdown>
     ## Stockage
 
-    Comme les clés sont critiques à la protection des donnée, bien stocker les clé est très important.  Les concepts autour du stockage des clé sont:
+    Comme les clés sont critiques à la protection des données, bien stocker les clés est très important.  Les concepts autour du stockage des clés sont:
 
     * Authentification
-    * Authorisation
+    * Autorisation
     * Audit
   </section>
 
   <section data-markdown>
     ## HSM
 
-    Un HSM est un module physique qui permet le stockage sécuritaire des clé. Le HSM est configuré de manière à ce que les clés ne puissent pas être exporté, et que toute tentative de physiquement voler les clés détruise le matériel.
+    Un HSM (Hardware Security Module) est un module physique qui permet le stockage sécuritaire des clés. Le HSM est configuré de manière à ce que les clés ne puissent pas être exportées et que toute tentative de physiquement voler les clés détruise le matériel.
   </section>
   <section data-markdown>
     ## Utilisation d'un HSM
 
-    Un HSM sera utilisé pour procéder à des opérations cryptographique.  Ainsi, au lieu d'accèder une clé, une requète sera faite au HSM pour chiffrer ou déchiffrer des données, sans que la clé soit visible à l'Extérieur de l'appareil.
+    Un HSM sera utilisé pour procéder à des opérations cryptographiques.  Ainsi, au lieu d'accèder à une clé, une requète sera faite au HSM pour chiffrer ou déchiffrer des données, sans que la clé ne soit visible à l'extérieur de l'appareil.
   </section>
 </section>
 <section>
@@ -113,30 +124,30 @@ applications where long-term key protection is not required).
   <section data-markdown>
     ## Définition
 
-    L'encryption par enveloppe est une méthode qui permet de définir une hierachie de clé.  Ce type de hiérarchie permet de limiter l'impact d'une clé compromise, facilite la rotation et permet d'utiliser plus facilement les équipements physiques tels que les HSM
+    L'encryption par enveloppe est une méthode qui permet de définir une hiérachie de clés.  Ce type de hiérarchie permet de limiter l'impact d'une clé compromise, facilite la rotation et permet d'utiliser plus facilement les équipements physiques tels que les HSM
   </section>
   <section data-markdown>
-    ## Processus de chiffrement
+    ## Processus de chiffrement des clés
 
-    1. Une clé de chiffrement des clés (KEK) est générée.  Cette clé est conservée à un endroit sécuritaire (souvent, un HSM)
-    2. Lorsque des données doivent être chiffrées, une clé de chiffrement de données (DEK) est générée.
-    3. La clé de chiffrement des donnée est utilisée pour chiffrer les données.
-    4. La clé de chiffrement des donnée est envoyé au HSM (ou autre module cryptographique) pour être chiffrée avec la KEK.
-    5. La DEK chiffrée est enregistreée avec les données.
+    1. Une clé de chiffrement des clés (KEK ou Key Encryption key ou Master Key) est générée.  Cette clé est conservée à un endroit sécuritaire (souvent, un HSM)
+    2. Lorsque des données doivent être chiffrées, une clé de chiffrement de données (DEK ou Data Encryption Key) est générée.
+    3. La clé de chiffrement des données est utilisée pour chiffrer les données.
+    4. La clé de chiffrement des données est envoyée au HSM (ou autre module cryptographique) pour être chiffrée avec la KEK.
+    5. La DEK chiffrée est enregistreée avec les données, sur le même support.
   </section>
   <section data-markdown>
-    ## Processus de chiffrement
+    ## Processus de chiffrement des données
 
-    1. Lorsque des données doivent être chiffrées, la clé de chiffrement des données stockées avec les donnée elle-même est extraite.
+    1. Lorsque des données doivent être chiffrées, la clé de chiffrement des données, stockée avec les données elles-mêmes, est extraite.
+    2. La clé de chiffrement des données est envoyé au HSM (ou autre module cryptographique) pour être déchiffrée avec la KEK.
+    3. La clé de chiffrement des données, ainsi décryptée, est utilisée pour déchiffrer les données.
+  </section>
+  <section data-markdown>
+    ## Exemple de dé chiffrement des données
+
+    1. Lorsque des données doivent être chiffrées, la clé de chiffrement des données stockées avec les données elles-mêmes est extraite.
     2. La clé de chiffrement des donnée est envoyé eau HSM (ou autre module cryptographique) pour être déchiffrée avec la KEK.
-    3. La clé de chiffrement des donnée est utilisée pour déchiffrer les données.
-  </section>
-  <section data-markdown>
-    ## Exemple
-
-    1. Lorsque des données doivent être chiffrées, la clé de chiffrement des données stockées avec les donnée elle-même est extraite.
-    2. La clé de chiffrement des donnée est envoyé eau HSM (ou autre module cryptographique) pour être déchiffrée avec la KEK.
-    3. La clé de chiffrement des donnée est utilisée pour déchiffrer les données.
+    3. La clé de chiffrement des données est utilisée pour chiffrer les données.
   </section>
 </section>
 
