--- a/_slides/cours4/index.html
+++ b/_slides/cours4/index.html
@@ -1,6 +1,6 @@
 ---
-title: Cours 4 et 5 - Algorithmes
-description: Algorithmes de base
+title: Cours 4 - Gestion des clés (suite)
+description: Suite de l'introduction a la gestion des clés
 theme: night
 date: 2017-1-19
 reveal_config:
@@ -9,92 +9,51 @@ reveal_config:
   transition: slide
   slideNumber: true
 ---
-<section data-markdown>
-  # CR490
-  # Cryptographie appliquée
-  ## Cours 4 et 5
-</section>
 <section>
   <section data-markdown>
-    # Diffie-Hellman
+    # Encryption par enveloppe
   </section>
   <section data-markdown>
-    ## Utilité de l'algorithme
+    ## Définition
+
+    L'encryption par enveloppe est une méthode qui permet de définir une hierachie de clé.  Ce type de hiérarchie permet de limiter l'impact d'une clé compromise, facilite la rotation et permet d'utiliser plus facilement les équipements physiques tels que les HSM
   </section>
   <section data-markdown>
-    ## Théorie
+    ## Processus de chiffrement
+
+    1. Une clé de chiffrement des clés (KEK) est générée.  Cette clé est conservée à un endroit sécuritaire (souvent, un HSM)
+    2. Lorsque des données doivent être chiffrées, une clé de chiffrement de données (DEK) est générée.
+    3. La clé de chiffrement des donnée est utilisée pour chiffrer les données.
+    4. La clé de chiffrement des donnée est envoyé au HSM (ou autre module cryptographique) pour être chiffrée avec la KEK.
+    5. La DEK chiffrée est enregistreée avec les données.
   </section>
   <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-<section>
-  <section data-markdown>
-    # SHA
-  </section>
-  <section data-markdown>
-    ## Utilité de l'algorithme
+    ## Processus de chiffrement
+
+    1. Lorsque des données doivent être chiffrées, la clé de chiffrement des données stockées avec les donnée elle-même est extraite.
+    2. La clé de chiffrement des donnée est envoyé eau HSM (ou autre module cryptographique) pour être déchiffrée avec la KEK.
+    3. La clé de chiffrement des donnée est utilisée pour déchiffrer les données.
   </section>
   <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-<section>
-  <section data-markdown>
-    # RSA
-  </section>
-  <section data-markdown>
-    ## Utilité de l'algorithme
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Exemples
+    ## Exemple
+
+    1. Lorsque des données doivent être chiffrées, la clé de chiffrement des données stockées avec les donnée elle-même est extraite.
+    2. La clé de chiffrement des donnée est envoyé eau HSM (ou autre module cryptographique) pour être déchiffrée avec la KEK.
+    3. La clé de chiffrement des donnée est utilisée pour déchiffrer les données.
   </section>
 </section>
+
 <section>
   <section data-markdown>
-    # EC
+    # Démo d'outils de gestion des clés
   </section>
   <section data-markdown>
-    ## Utilité de l'algorithme
+    ## Google CloudKMS
   </section>
   <section data-markdown>
-    ## Théorie
+    ## Amazon KMS
   </section>
   <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-<section>
-  <section data-markdown>
-    # ECDSA
-  </section>
-  <section data-markdown>
-    ## Utilité de l'algorithme
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-<section>
-  <section data-markdown>
-    # AES
-  </section>
-  <section data-markdown>
-    ## Utilité de l'algorithme
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Exemples
+    ## Vault
   </section>
 </section>
