--- a/_slides/cours6/index2.html
+++ b/_slides/cours6/index2.html
@@ -98,3 +98,27 @@ reveal_config:
     ## Exemples
   </section>
 </section>
+
+
+
+
+<section>
+  <section data-markdown>
+    # Cryptographie et messagerie
+  </section>
+  <section data-markdown>
+    ## S/MIME
+  </section>
+  <section data-markdown>
+    ## PGP
+  </section>
+  <section data-markdown>
+    ## OTR
+  </section>
+  <section data-markdown>
+    ## Demo Keybase
+  </section>
+  <section data-markdown>
+    ## Demo Virtru
+  </section>
+</section>
