--- a/_slides/cours6/index.html
+++ b/_slides/cours6/index.html
@@ -1,6 +1,6 @@
 ---
-title: Cours 6 et 7 - Attaques et cryptologie
-description: Introduction aux attaques cryptologiques
+title: Cours 6 - Cryptographie en entreprise
+description: Introduction à l'utilisation de la cryptographie en entreprise
 theme: night
 date: 2017-1-19
 reveal_config:
@@ -12,148 +12,36 @@ reveal_config:
 <section data-markdown>
   # CR490
   # Cryptographie appliquée
-  ## Cours 6 et 7
+  ## Cours 6
 </section>
-<section>
+<section data-markdown>
+  # Demo Vault
+</section>
+<section data-markdown>
   <section data-markdown>
-    # Attaques *Known Plaintext*
+    # Cryptographie assymétrique
   </section>
   <section data-markdown>
-    ## Mode d'attaque
+    ## Qu'est-ce que la cryptographie assymétrique?
+
+    * Utilisation de deux clés: publique et privée
+    * Les données chiffrées avec la clé publique ne peuvent être déchifrées qu'avec la clé privée
+    * Les données chiffrées avec la clé privéee ne peuvent est déchiffrées qu'avec la clé publique
   </section>
   <section data-markdown>
-    ## Théorie
+    ## Utilisation: Crypto sans secrets partagé
   </section>
   <section data-markdown>
-    ## Contremesures
+    ## Utilisation: Signature numérique
   </section>
   <section data-markdown>
-    ## Exemples
+    ## Utilisation: authentification
   </section>
+</section>
+<section data-markdown>
+  # Demo Keybase
 </section>
 
-<section>
-  <section data-markdown>
-    # Attaques *Chosen Plaintext*
-  </section>
-  <section data-markdown>
-    ## Mode d'attaque
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Contremesures
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-
-<section>
-  <section data-markdown>
-    # Attaques *Chosen Ciphertext*
-  </section>
-  <section data-markdown>
-    ## Mode d'attaque
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Contremesures
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-
-<section>
-  <section data-markdown>
-    # Attaques *Chosen Plaintext*
-  </section>
-  <section data-markdown>
-    ## Mode d'attaque
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Contremesures
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-
-<section>
-  <section data-markdown>
-    # Attaques *Padding Oracle*
-  </section>
-  <section data-markdown>
-    ## Mode d'attaque
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Contremesures
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-
-
-<section>
-  <section data-markdown>
-    # Attaques Statistique
-  </section>
-  <section data-markdown>
-    ## Mode d'attaque
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Contremesures
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-
-<section>
-  <section data-markdown>
-    # Attaques *MitM*
-  </section>
-  <section data-markdown>
-    ## Mode d'attaque
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Contremesures
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
-</section>
-<section>
-  <section data-markdown>
-    # Attaques *Side-channel*
-  </section>
-  <section data-markdown>
-    ## Mode d'attaque
-  </section>
-  <section data-markdown>
-    ## Théorie
-  </section>
-  <section data-markdown>
-    ## Contremesures
-  </section>
-  <section data-markdown>
-    ## Exemples
-  </section>
+<section data-markdown>
+  # Utilisation Hybride: TLS
 </section>
