--- a/_slides/cours10/index.html
+++ b/_slides/cours10/index.html
@@ -16,6 +16,6 @@ reveal_config:
 </section>
 <section>
   <section data-markdown>
-    # Étude de cas
+    # Étude de cas - Discussion en classe
   </section>
 </section>
