--- a/_slides/cours11/index.html
+++ b/_slides/cours11/index.html
@@ -17,6 +17,7 @@ reveal_config:
 <section>
   <section data-markdown>
     # Cryptographiet et infonuagique
+    ## Conference:
     ## Maya Kaczorowski, Product Manager, Google Cloud Platform
   </section>
 </section>
