--- a/_slides/cours12/index.html
+++ b/_slides/cours12/index.html
@@ -16,6 +16,6 @@ reveal_config:
 </section>
 <section>
   <section data-markdown>
-    # Étude de cas
+    # Laboratoire attaque TLS.
   </section>
 </section>
