fixed formatting  	modified:   _slides/cours10/index.html

--- a/_slides/cours10/index.html
+++ b/_slides/cours10/index.html
@@ -52,7 +52,10 @@ reveal_config:
 
   <section data-markdown>
     # Question répondue par PatL
-      ## Dans le cadre d’une hiérarchie à plusieurs niveaux comme chez Google,
+  </section>
+
+  <section data-markdown>
+    ## Dans le cadre d’une hiérarchie à plusieurs niveaux comme chez Google,
       est-ce qu’il y a une mise en cache ou est-ce qu’il faut remonter jusqu’à la clé racine à chaque opération?
   </section>
 
